# Nordic_OTA_Application

./: CMakeLists.txt  README.md  nrf7002dk_nrf5340_cpuapp.overlay  prj.conf  sysbuild.cmake  sysbuild.conf
src/: mac_auth.c  mac_auth.h  main.c  ntp_sync.c  ntp_sync.h  ota_download.c  ota_download.h  ota_manifest.c  ota_manifest.h  sensor_iface.c  sensor_iface.h  tls_common.c  tls_common.h  wifi_net.c  wifi_net.h
sysbuild/: mcuboot.conf
